# 02_agentscope

./: .env.example  .gitignore  AGENTS.md  PROJECT_OVERVIEW.md  README.md  Test copy.md  Unit Contract.md  course-content.md  editor_tools.py  log.md  main.py  markdown_tools.py  parser_tools.py  pyproject.toml  task_demo.md
.agentscope_memory/: user_preferences.json
.codegraph/: daemon.pid
.skills/markdown-workspace/: SKILL.md
.skills/plan-mode-task-management/: SKILL.md
.skills/user-memory-preferences/: SKILL copy.md  SKILL.md
config/: agentscope.example.toml
docs/: 02_agentscope-完整模块文档.md  README.md  agentscope-2-memory-research.md  markdown-tools-for-agentscope.md
docs/modules/: 01-cli-entry.md  02-agent-core.md  03-tools-system.md  04-configuration.md  05-architecture-overview.md  06-data-flow.md
docs/superpowers/plans/: 2026-06-08-agent-trace-log.md
docs/superpowers/specs/: 2026-06-08-agent-trace-log-design.md
src/: cli.py
src/agentscope_course/: __init__.py  agent.py  cli.py  config.py  console.py  conversation.py  trace.py
src/agentscope_course/models/: __init__.py  ollama.py
src/agentscope_tools/: __init__.py  agentscope_wrapper.py  editor.py  formatter.py  markdown.py  memory.py  parser.py
src/agentscope_tools/org_tools/: __init__.py  editor.py  scanner.py
src/agentscope_tools/ori_tools/: __init__.py  editor.py  memory.py  parser.py  scanner.py
