[project]
name = "course-agent"
version = "0.1.0"
description = "Markdown parser, editor, and formatter tools for AgentScope"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agentscope>=2.0.0",
    "markdown-it-py>=4.2.0",
    "mdit-py-plugins>=0.5.0",
    "mdformat>=0.7.22",
    "mdformat-gfm>=0.4.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
course-agent = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentscope_course", "src/agentscope_tools"]
